update Backand service

--- a/app/index.html
+++ b/app/index.html
@@ -26,17 +26,6 @@
     <!-- Add your site or application content here -->
     <div class="container" ui-view></div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-
     <!--[if lt IE 9]>
     <script src="/bower_components/es5-shim/es5-shim.js"></script>
     <script src="/bower_components/json3/lib/json3.min.js"></script>
@@ -61,7 +50,9 @@
     <!-- endbuild -->
 
     <!-- Backand SDK for Angular -->
-    <script src="//cdn.backand.net/backand/dist/1.5.1/backand.min.js"></script>
+    <!--<script src="//cdn.backand.net/backand/dist/1.5.1/backand.min.js"></script>-->
+    <script src="http://localhost:63342/restangularbknd-orm/src/backand.js"></script>
+
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
