--- a/app/index.html
+++ b/app/index.html
@@ -50,8 +50,7 @@
     <!-- endbuild -->
 
     <!-- Backand SDK for Angular -->
-    <!--<script src="//cdn.backand.net/backand/dist/1.5.1/backand.min.js"></script>-->
-    <script src="http://localhost:63342/restangularbknd-orm/src/backand.js"></script>
+    <script src="//cdn.backand.net/backand/dist/1.5.1/backand.min.js"></script>
 
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
