Fixed interceptors infinite loop Improved naming conventions

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
     <script src="app.js"></script>
     <script src="views/main/main.js"></script>
     <script src="views/login/login.js"></script>
-    <script src="services/backand.js"></script>
+    <script src="services/todo_service.js"></script>
     <script src="config/interceptors/httpInterceptor.js"></script>
     <!-- endbuild -->
 
