--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -50,8 +50,8 @@
     <!-- endbuild -->
 
     <!-- Backand SDK for Angular -->
-    <script src="//cdn.backand.net/backand/dist/1.5.1/backand.min.js"></script>
-
+    <!--<script src="//cdn.backand.net/backand/dist/1.5.1/backand.min.js"></script>-->
+      <script src="../bower_components/angularbknd-sdk/dist/backand.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
