--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
     <!-- endbuild -->
 
     <!-- Backand SDK for Angular -->
-    <script src="//cdn.backand.net/backand/dist/1.6.0/backand.debug.js"></script>
+    <script src="//cdn.backand.net/backand/dist/1.6.0/backand.min.js"></script>
       
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
