connect with google

--- a/app/index.html
+++ b/app/index.html
@@ -50,8 +50,8 @@
     <!-- endbuild -->
 
     <!-- Backand SDK for Angular -->
-    <script src="//cdn.backand.net/backand/dist/1.6.0/backand.min.js"></script>
-
+    <!--<script src="//cdn.backand.net/backand/dist/1.6.0/backand.min.js"></script>-->
+    <script src="bower_components/angularbknd-sdk/dist/backand.debug.js"></script>
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
     <script src="views/main/main.js"></script>
