--- a/app/index.html
+++ b/app/index.html
@@ -50,12 +50,15 @@
     <!-- endbuild -->
 
     <!-- Backand SDK for Angular -->
-    <script src="//cdn.backand.net/backand/dist/1.6.0/backand.min.js"></script>
-      
+    <!--<script src="//cdn.backand.net/backand/dist/1.6.0/backand.min.js"></script>-->
+    <script src="bower_components/angularbknd-sdk/dist/backand.min.js"></script>
+
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
     <script src="views/main/main.js"></script>
     <script src="views/login/login.js"></script>
+    <script src="views/login/reset-password.js"></script>
+    <script src="views/login/change-password.js"></script>
     <script src="services/todo_service.js"></script>
     <script src="config/interceptors/todo_http_interceptor.js"></script>
     <!-- endbuild -->
