general refactoring and fixes

--- a/app/index.html
+++ b/app/index.html
@@ -55,12 +55,15 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
-    <script src="views/main/main.js"></script>
-    <script src="views/login/login.js"></script>
-    <script src="views/login/reset-password.js"></script>
-    <script src="views/login/change-password.js"></script>
+    <script src="views/main/todoList.js"></script>
+    <script src="views/main/header.js"></script>
+    <script src="views/auth/login.js"></script>
+    <script src="views/auth/reset-password.js"></script>
+    <script src="views/auth/change-password.js"></script>
+    <script src="services/auth_service.js"></script>
     <script src="services/todo_service.js"></script>
     <script src="config/interceptors/todo_http_interceptor.js"></script>
+    <script src="config/consts.js"></script>
     <!-- endbuild -->
 
 </body>
