added reset password, social sign in buttons

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,8 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/bootstrap-social.css">
+    <link rel="stylesheet" href="assets/styles/font-awesome.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="mytodoApp">
